--- a/lib/scram/Makefile.am
+++ b/lib/scram/Makefile.am
@@ -22,7 +22,10 @@ AM_CFLAGS += $(CFLAG_VISIBILITY)
 AM_CPPFLAGS = -I$(srcdir)/../src -I../src -I$(srcdir)/../gl -I../gl
 
 noinst_LTLIBRARIES = libgsasl-scram.la
-libgsasl_scram_la_SOURCES = scram.h mechinfo.c
+libgsasl_scram_la_SOURCES = scram.h mechinfo.c \
+	tokens.h \
+	printer.h \
+	validate.h validate.c
 
 if CLIENT
 libgsasl_scram_la_SOURCES += client.c
