--- a/lib/scram/Makefile.am
+++ b/lib/scram/Makefile.am
@@ -24,9 +24,9 @@ AM_CPPFLAGS = -I$(srcdir)/../src -I../src -I$(srcdir)/../gl -I../gl
 noinst_LTLIBRARIES = libgsasl-scram.la
 libgsasl_scram_la_SOURCES = scram.h mechinfo.c \
 	tokens.h \
-	printer.h printer.c \
-	validate.h validate.c
-
+	validate.h validate.c \
+	parser.h parser.c \
+	printer.h printer.c
 
 if CLIENT
 libgsasl_scram_la_SOURCES += client.c
