--- a/.gitignore
+++ b/.gitignore
@@ -48,11 +48,84 @@ lib/config.h.in
 lib/config.log
 lib/config.status
 lib/configure
+lib/gl/alloca.h
+lib/gl/stdio.h
+lib/gl/stdlib.h
+lib/gl/string.h
+lib/gl/unistd.h
 lib/libgsasl.pc
 lib/libtool
+lib/m4/codeset.m4
+lib/m4/gettext.m4
+lib/m4/glibc2.m4
+lib/m4/glibc21.m4
+lib/m4/iconv.m4
+lib/m4/intdiv0.m4
+lib/m4/intl.m4
+lib/m4/intldir.m4
+lib/m4/intlmacosx.m4
+lib/m4/intmax.m4
+lib/m4/inttypes-pri.m4
+lib/m4/inttypes_h.m4
+lib/m4/lcmessage.m4
+lib/m4/lib-ld.m4
+lib/m4/lib-link.m4
+lib/m4/lib-prefix.m4
+lib/m4/libtool.m4
+lib/m4/lock.m4
+lib/m4/longlong.m4
+lib/m4/ltoptions.m4
+lib/m4/ltsugar.m4
+lib/m4/ltversion.m4
+lib/m4/lt~obsolete.m4
+lib/m4/nls.m4
+lib/m4/po.m4
+lib/m4/printf-posix.m4
+lib/m4/progtest.m4
+lib/m4/size_max.m4
+lib/m4/stdint_h.m4
+lib/m4/uintmax_t.m4
+lib/m4/visibility.m4
+lib/m4/wchar_t.m4
+lib/m4/wint_t.m4
+lib/m4/xsize.m4
 lib/po/
 lib/stamp-h1
 libtool
+m4/codeset.m4
+m4/gettext.m4
+m4/glibc2.m4
+m4/glibc21.m4
+m4/iconv.m4
+m4/intdiv0.m4
+m4/intl.m4
+m4/intldir.m4
+m4/intlmacosx.m4
+m4/intmax.m4
+m4/inttypes-pri.m4
+m4/inttypes_h.m4
+m4/lcmessage.m4
+m4/lib-ld.m4
+m4/lib-link.m4
+m4/lib-prefix.m4
+m4/libtool.m4
+m4/lock.m4
+m4/longlong.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+m4/nls.m4
+m4/po.m4
+m4/printf-posix.m4
+m4/progtest.m4
+m4/size_max.m4
+m4/stdint_h.m4
+m4/uintmax_t.m4
+m4/visibility.m4
+m4/wchar_t.m4
+m4/wint_t.m4
+m4/xsize.m4
 po/
 src/gsasl
 src/gsasl_cmd.c
