--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,21 @@ examples/client
 examples/client-callback
 examples/client-mech
 examples/client-serverfirst
+gl/alloca.h
+gl/arpa/
+gl/charset.alias
+gl/configmake.h
+gl/iconv_open-aix.h
+gl/iconv_open-hpux.h
+gl/iconv_open-irix.h
+gl/iconv_open-osf.h
+gl/iconv_open-solaris.h
+gl/ref-add.sed
+gl/ref-del.sed
+gl/stdio.h
+gl/stdlib.h
+gl/string.h
+gl/unistd.h
 lib/aclocal.m4
 lib/autom4te.cache/
 lib/build-aux/config.guess
@@ -48,11 +63,32 @@ lib/config.h.in
 lib/config.log
 lib/config.status
 lib/configure
+lib/digest-md5/test-parser
 lib/gl/alloca.h
 lib/gl/stdio.h
 lib/gl/stdlib.h
 lib/gl/string.h
 lib/gl/unistd.h
+lib/gltests/libtests.a
+lib/gltests/test-alloca-opt
+lib/gltests/test-base64
+lib/gltests/test-errno
+lib/gltests/test-getdelim
+lib/gltests/test-getline
+lib/gltests/test-memchr
+lib/gltests/test-rawmemchr
+lib/gltests/test-stdbool
+lib/gltests/test-stddef
+lib/gltests/test-stdint
+lib/gltests/test-stdio
+lib/gltests/test-stdlib
+lib/gltests/test-strchrnul
+lib/gltests/test-string
+lib/gltests/test-strverscmp
+lib/gltests/test-unistd
+lib/gltests/test-vasnprintf
+lib/gltests/test-vasprintf
+lib/gltests/test-wchar
 lib/libgsasl.pc
 lib/libtool
 lib/m4/codeset.m4
@@ -91,6 +127,7 @@ lib/m4/wint_t.m4
 lib/m4/xsize.m4
 lib/po/
 lib/stamp-h1
+lib/tests/test-error
 libtool
 m4/codeset.m4
 m4/gettext.m4
@@ -131,4 +168,18 @@ src/gsasl
 src/gsasl_cmd.c
 src/gsasl_cmd.h
 stamp-h1
+tests/cram-md5
+tests/crypto
+tests/digest-md5
+tests/errors
+tests/external
+tests/md5file
+tests/name
+tests/old-base64
+tests/old-cram-md5
+tests/old-digest-md5
+tests/old-md5file
+tests/old-simple
 tests/scram
+tests/simple
+tests/suggest
