--- a/lib/gltests/Makefile.am
+++ b/lib/gltests/Makefile.am
@@ -77,6 +77,15 @@ EXTRA_DIST += test-gc-pbkdf2-sha1.c
 
 ## end   gnulib module crypto/gc-pbkdf2-sha1-tests
 
+## begin gnulib module crypto/gc-sha1-tests
+
+TESTS += test-gc-sha1
+check_PROGRAMS += test-gc-sha1
+
+EXTRA_DIST += test-gc-sha1.c
+
+## end   gnulib module crypto/gc-sha1-tests
+
 ## begin gnulib module errno-tests
 
 TESTS += test-errno
