Enable SCRAM-SHA-1 during distcheck testing.

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,4 +20,5 @@ SUBDIRS = lib po gl src examples tests doc gltests
 EXTRA_DIST = cfg.mk maint.mk .clcopying
 
 ACLOCAL_AMFLAGS = -I m4 -I gl/m4 -I lib/m4 -I lib/gl/m4
-DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --disable-obsolete
+DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --disable-obsolete \
+	--enable-scram-sha1
