--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,53 @@ gl/stdio.h
 gl/stdlib.h
 gl/string.h
 gl/unistd.h
+gltests/libtests.a
+gltests/test-alignof
+gltests/test-alloca-opt
+gltests/test-arpa_inet
+gltests/test-c-ctype
+gltests/test-c-strcasecmp
+gltests/test-c-strncasecmp
+gltests/test-environ
+gltests/test-errno
+gltests/test-fseeko
+gltests/test-getaddrinfo
+gltests/test-getdelim
+gltests/test-getline
+gltests/test-getopt
+gltests/test-gettimeofday
+gltests/test-iconv
+gltests/test-lseek
+gltests/test-malloca
+gltests/test-mbrtowc
+gltests/test-mbsinit
+gltests/test-memchr
+gltests/test-netdb
+gltests/test-netinet_in
+gltests/test-perror
+gltests/test-poll
+gltests/test-quotearg
+gltests/test-select
+gltests/test-select-fd
+gltests/test-select-stdin
+gltests/test-snprintf
+gltests/test-sockets
+gltests/test-stdbool
+gltests/test-stddef
+gltests/test-stdint
+gltests/test-stdio
+gltests/test-stdlib
+gltests/test-strerror
+gltests/test-striconv
+gltests/test-string
+gltests/test-sys_select
+gltests/test-sys_socket
+gltests/test-sys_time
+gltests/test-unistd
+gltests/test-vasnprintf
+gltests/test-version-etc
+gltests/test-wchar
+gltests/test-wctype
 lib/aclocal.m4
 lib/autom4te.cache/
 lib/build-aux/config.guess
@@ -73,6 +120,9 @@ lib/gltests/libtests.a
 lib/gltests/test-alloca-opt
 lib/gltests/test-base64
 lib/gltests/test-errno
+lib/gltests/test-gc-hmac-sha1
+lib/gltests/test-gc-pbkdf2-sha1
+lib/gltests/test-gc-sha1
 lib/gltests/test-getdelim
 lib/gltests/test-getline
 lib/gltests/test-memchr
