Update gnulib files.

--- a/gltests/Makefile.am
+++ b/gltests/Makefile.am
@@ -231,6 +231,14 @@ EXTRA_libtests_a_SOURCES += ioctl.c
 
 ## end   gnulib module ioctl
 
+## begin gnulib module link-warning
+
+LINK_WARNING_H=$(top_srcdir)/lib/build-aux/link-warning.h
+
+EXTRA_DIST += $(top_srcdir)/lib/build-aux/link-warning.h
+
+## end   gnulib module link-warning
+
 ## begin gnulib module listen
 
 
